Se implementa la navegación, la interfaz principal y el inicio de sesión

--- a/cliente/app/app.component.html
+++ b/cliente/app/app.component.html
@@ -1,3 +1,26 @@
-<h1>{{titulo}}</h1>
-<a routerLink="/empleados">Empleados</a>
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <div class="container">
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" routerLink="/inicio">El Ferretero</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a routerLink="/inicio"></a>
+                </li>
+                <li class="page-scroll">
+                    <a routerLink="/empleados">Empleados</a>
+                </li>
+                <li class="page-scroll">
+                    <a routerLink="/login">Iniciar Sesión</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <router-outlet></router-outlet>
