--- a/cliente/app/componentes/empleados/empleados.component.html
+++ b/cliente/app/componentes/empleados/empleados.component.html
@@ -1,7 +1,15 @@
-<ul>
-    <li *ngFor="let empleado of empleados">
-        {{empleado.name}} {{empleado.id}}
-    </li>
-</ul>
-<input type="text" #apellido>
-<button (click)="enviarApellido(apellido.value); apellido.value=''">Envíar</button>
+<section id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <ul>
+                    <li *ngFor="let empleado of empleados">
+                        {{empleado.name}} {{empleado.id}}
+                    </li>
+                </ul>
+                <input type="text" #apellido>
+                <button (click)="enviarApellido(apellido.value); apellido.value=''">Envíar</button>
+            </div>
+        </div>
+    </div>
+</section>
