implementada interfaz de orden de compra

--- a/cliente/app/app.component.html
+++ b/cliente/app/app.component.html
@@ -13,6 +13,12 @@
                     <a routerLink="/inicio"></a>
                 </li>
                 <li class="page-scroll">
+                    <a routerLink="/orden-de-compra">Orden de Compra</a>
+                </li>
+                <li class="page-scroll">
+                    <a routerLink="/factura-compra">Factura Compra</a>
+                </li>
+                <li class="page-scroll">
                     <a routerLink="/empleados">Empleados</a>
                 </li>
                 <li class="page-scroll">
