--- a/cliente/app/componentes/login/login.component.html
+++ b/cliente/app/componentes/login/login.component.html
@@ -1,4 +1,4 @@
-<section id="contact">
+<section>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -7,23 +7,30 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <form name="sentMessage" id="contactForm">
+                {{diagnostic}}
+                <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Usuario</label>
-                            <input type="text" class="form-control" placeholder="Usuario" id="name">
+                            <label for="usuario">Usuario</label>
+                            <input type="text" class="form-control" placeholder="Usuario" id="usuario" required [(ngModel)]="credenciales.usuario" name="usuario" #usuario="ngModel">
+                        </div>
+                        <div [hidden]="usuario.valid || usuario.pristine" class="alert alert-danger"> 
+                            Usuario requerido
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Contraseña</label>
-                            <input type="password" class="form-control" placeholder="Contraseña" id="email">
+                            <label for="password">Contraseña</label>
+                            <input type="password" class="form-control" placeholder="Contraseña" id="password" required [(ngModel)]="credenciales.password" name="password" #password="ngModel">
+                        </div>
+                        <div [hidden]="password.valid || password.pristine" class="alert alert-danger"> 
+                            Contraseña requerida
                         </div>
                     </div>
                     <br>
                     <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-success btn-lg">Ingresar</button>
+                        <div class="form-group col-xs-12 text-center">
+                            <button type="submit" class="btn btn-success btn-lg" [disabled]="!loginForm.form.valid">Ingresar</button>
                         </div>
                     </div>
                 </form>
