--- a/cliente/app/componentes/login/login.component.html
+++ b/cliente/app/componentes/login/login.component.html
@@ -7,12 +7,11 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                {{diagnostic}}
-                <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+                <form (ngSubmit)="login()" #loginForm="ngForm">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label for="usuario">Usuario</label>
-                            <input type="text" class="form-control" placeholder="Usuario" id="usuario" required [(ngModel)]="credenciales.usuario" name="usuario" #usuario="ngModel">
+                            <label for="email">Usuario</label>
+                            <input type="text" class="form-control validate" placeholder="Usuario" id="email" required [(ngModel)]="user.email" name="usuario" #usuario="ngModel">
                         </div>
                         <div [hidden]="usuario.valid || usuario.pristine" class="alert alert-danger"> 
                             Usuario requerido
@@ -21,7 +20,7 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label for="password">Contraseña</label>
-                            <input type="password" class="form-control" placeholder="Contraseña" id="password" required [(ngModel)]="credenciales.password" name="password" #password="ngModel">
+                            <input type="password" class="form-control validate" placeholder="Contraseña" id="password" required [(ngModel)]="user.password"  name="password" #password="ngModel">
                         </div>
                         <div [hidden]="password.valid || password.pristine" class="alert alert-danger"> 
                             Contraseña requerida
